chained/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: chained-service-1
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
