chained/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chained-service-2
  name: chained-service-2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: chained-service-2
  type: ClusterIP
